FIX: fix match spacing...

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -498,7 +498,7 @@ header, li a, .thedate span {
 
 .yellow-bg {
     background: rgb(242 194 11) !important;
-    color: #faf4f4 !important;
+    color: #000 !important;
 }
 
 .compt {
